--- a/news.html
+++ b/news.html
@@ -119,6 +119,103 @@
             </div>
         </div>
 
+        <!-- 品牌 -->
+        <div class="section">
+            <hr>
+            <div class="Liz-container Liz-margin-vertical-lg">
+                <div class="Liz-flex">
+                    <div class="Liz-flex-1 Liz-border-right Liz-text-center">
+                        <img src="images/page1/logo1.png" alt="">
+                    </div>
+                    <div class="Liz-flex-1 Liz-border-right Liz-text-center">nn
+                        <img src="images/page1/logo2.png" alt="">
+                    </div>
+                    <div class="Liz-flex-1 Liz-text-center">
+                        <img src="images/page1/logo3.png" alt="">
+                    </div>
+                    <div class="Liz-flex-1 Liz-border-horizontal Liz-text-center">
+                        <img src="images/page1/logo4.png" alt="">
+                    </div>
+                    <div class="Liz-flex-1 Liz-text-center">
+                        <img src="images/page1/logo5.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- footor -->
+        <div class="section Liz-border-vertical Liz-bg-default">
+            <div class="Liz-container Liz-margin-vertical-lg">
+                <div class="Liz-flex  Liz-flex-justify-center">
+                    <img src="images\page1\top.png">
+                </div>
+            </div>
+        </div>
+        <footer class="section">
+            <div class="Liz-container Liz-padding-vertical-lg">
+                <div class="Liz-flex">
+                    <div class="Liz-flex-1 Liz-flex">
+
+                                <ul class="footList Liz-flex-1">
+                                    <li class="Liz-text-lg">One</li>
+                                    <li class="Liz-border-bottom"></li>
+                                    <li>Three</li>
+                                    <li>One</li>
+                                    <li>Two</li>
+                                    <li>Three</li>
+                                </ul>
+
+                                <ul class="footList Liz-flex-1">
+                                    <li class="Liz-text-lg">One</li>
+                                    <li class="Liz-border-bottom"></li>
+                                    <li>Three</li>
+                                    <li>One</li>
+                                    <li>Two</li>
+                                    <li>Three</li>
+                                </ul>
+
+                                <ul class="footList Liz-flex-1">
+                                    <li class="Liz-text-lg">One</li>
+                                    <li class="Liz-border-bottom"></li>
+                                    <li>Three</li>
+                                    <li>One</li>
+                                    <li>Two</li>
+                                    <li>Three</li>
+                                </ul>
+
+                                <ul class="footList Liz-flex-1">
+                                    <li class="Liz-text-lg">One</li>
+                                    <li class="Liz-border-bottom"></li>
+                                    <li>Three</li>
+                                    <li>One</li>
+                                    <li>Two</li>
+                                    <li>Three</li>
+                                </ul>
+
+                    </div>
+                    <div class="Liz-flex-1 Liz-flex Liz-flex-justify-right">
+                    <div class="Liz-flex-1">
+                         <a href="#" class="Liz-cf"><img src="images\page1\footor-logo.png" class="img-responsive Liz-fr"></a>
+                        <br>
+                        <a href="#" class="Liz-cf"><img src="images\page1\address.png" class="img-responsive Liz-fr"></a>
+                        <br>
+                        <a href="#" class="Liz-cf"><img src="images\page1\phone.png" class="img-responsive Liz-fr"></a>
+                    </div>
+
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <div class="section Liz-border-top">
+            <div class="Liz-container Liz-margin-vertical-lg Liz-flex">
+                <div class="Liz-flex-1">
+                    <img src="images\page1\copy.png" class="img-responsive ">
+                </div>
+                <div class="Liz-flex-1">
+                    <img src="images\page1\design.png" class="img-responsive Liz-fr">
+                </div>
+            </div>
+        </div>
+
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/news.js"></script>
