--- a/webstore.html
+++ b/webstore.html
@@ -53,12 +53,15 @@
         </div>
         <!-- <img src="images\page1\bg-header.png" class="img-responsive"> -->
     </div>
-    <div class="section Liz-border-bottom">
-        <div class="Liz-container Liz-margin-vertical-lg">
-            <span>HOME&gt;网上商城</span>
+<div class="section">
+        <div class="Liz-container">
+            <ol class="breadcrumb2">
+              <li><a href="#">HOME</a></li>
+              <li class="active">网上商城</li>
+            </ol>
         </div>
+        <hr>
     </div>
-
 
 <div class="section Liz-container Liz-margin-vertical-lg Liz-flex ">
 <div class="Liz-flex-1 Liz-flex-column ">
@@ -81,12 +84,12 @@
 
 
 
-
-        <!-- 品牌 -->
+<hr>
+    <!-- 品牌 -->
     <div class="section">
         <div class="Liz-container Liz-margin-vertical-lg">
             <div class="Liz-flex">
-                <div class="Liz-flex-1 Liz-border-right Liz-text-center">
+                <div class="Liz-flex-1 Liz-border-right">
                     <img src="images/page1/logo1.png" alt="">
                 </div>
                 <div class="Liz-flex-1 Liz-border-right Liz-text-center">nn
@@ -98,15 +101,16 @@
                 <div class="Liz-flex-1 Liz-border-horizontal Liz-text-center">
                     <img src="images/page1/logo4.png" alt="">
                 </div>
-                <div class="Liz-flex-1 Liz-text-center">
+                <div class="Liz-flex-1 text-right">
                     <img src="images/page1/logo5.png" alt="">
                 </div>
             </div>
         </div>
     </div>
     <!-- footor -->
-    <div class="section Liz-border-vertical Liz-bg-default">
-        <div class="Liz-container Liz-margin-vertical-lg">
+    <hr>
+    <div class="section Liz-bg-default">
+        <div class="Liz-container Liz-padding-vertical-lg">
             <div class="Liz-flex  Liz-flex-justify-center">
                 <img src="images\page1\top.png">
             </div>
@@ -166,7 +170,8 @@
             </div>
         </div>
     </footer>
-    <div class="section Liz-border-top">
+    <hr>
+    <div class="section">
         <div class="Liz-container Liz-margin-vertical-lg Liz-flex">
             <div class="Liz-flex-1">
                 <img src="images\page1\copy.png" class="img-responsive ">
