--- a/development.html
+++ b/development.html
@@ -52,17 +52,35 @@
         </div>
         <!-- <img src="images\page1\bg-header.png" class="img-responsive"> -->
     </div>
-    <div class="section Liz-border-bottom">
-        <div class="Liz-container Liz-margin-vertical-lg">
-            <span>HOME&gt;人才发展&gt;加入我们 </span>
+    <div class="section">
+        <div class="Liz-container">
+            <ol class="breadcrumb2">
+              <li><a href="#">HOME</a></li>
+              <li><a href="#">人才发展</a></li>
+              <li class="active">加入我们</li>
+            </ol>
         </div>
+        <hr>
     </div>
-    <div class="section Liz-container Liz-devel-nav Liz-margin-vertical-lg Liz-flex Liz-text-center ">
-        <li class="Liz-flex-1 active">加入我们</li>
-        <li class="Liz-flex-1">薪酬福利</li>
-        <li class="Liz-flex-1">学习发展</li>
-    </div>
-    <div class="section   Liz-border-top Liz-padding-vertical-lg">
+    <div class="section">
+            <div class="Liz-container">
+                <!-- Nav tabs -->
+                <ul class="navs Liz-flex Liz-flex-justify-center" role="tablist">
+                  <li role="presentation" class="active">
+                      <a aria-controls="home" role="tab" data-toggle="pill">加入我们</a>
+                  </li>
+                  <li role="presentation">
+                      <a aria-controls="profile" role="tab" data-toggle="pill">薪酬福利</a>
+                  </li>
+                  <li role="presentation">
+                      <a aria-controls="settings" role="tab" data-toggle="pill">学习发展</a>
+                  </li>
+                </ul>
+            </div>
+        </div>
+
+<hr>
+    <div class="section Liz-padding-vertical-lg">
         <div class="Liz-container Liz-flex Liz-margin-vertical-lg">
             <div class="Liz-flex-1">
                 <pre>
@@ -77,8 +95,8 @@
         <div class="panel-group Liz-margin-bottom-0" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default Liz-border-0 Liz-margin-top-0">
                 <div class="panel-heading Liz-bg-blue" role="tab" id="headingOne">
-                    <h4 class="panel-title Liz-container  Liz-flex Liz-margin-vertical-lg">
-                        <a role="button" class="Liz-flex-1 panel-a" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <h4 class="panel-title Liz-container  Liz-flex">
+                        <a role="button" class="Liz-flex-1 panel-a Liz-padding-vertical-lg" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 <pre  class="Liz-text-white">首席设计师      Chief designer</pre>
                         </a>
                         <div class="Liz-flex-1 Liz-fullWidth">
@@ -98,8 +116,8 @@
             </div>
             <div class="panel panel-default Liz-border-0 Liz-margin-top-0">
                 <div class="panel-heading Liz-bg-default" role="tab" id="headingTwo">
-                    <h4 class="panel-title Liz-container Liz-flex Liz-margin-vertical-lg">
-                        <a class="collapsed Liz-flex-1 panel-a" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <h4 class="panel-title Liz-container Liz-flex">
+                        <a class="collapsed Liz-flex-1 panel-a Liz-padding-vertical-lg" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 <pre class="Liz-text-black">设计助理      Design assistant</pre>
                         </a>
                         <div class="Liz-flex-1 Liz-fullWidth">
@@ -119,8 +137,8 @@
             </div>
             <div class="panel panel-default Liz-border-0 Liz-margin-top-0">
                 <div class="panel-heading Liz-bg-default" role="tab" id="headingThree">
-                    <h4 class="panel-title Liz-container  Liz-flex Liz-margin-vertical-lg">
-                    <a class="collapsed Liz-flex-1 panel-a" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <h4 class="panel-title Liz-container  Liz-flex">
+                    <a class="collapsed Liz-flex-1 panel-a  Liz-padding-vertical-lg" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 <pre class="Liz-text-black">拓展主管      Development director</pre>
                     </a>
                      <div class="Liz-flex-1 Liz-fullWidth">
@@ -141,10 +159,11 @@
         </div>
     </div>
     <!-- 品牌 -->
-    <div class="section Liz-border-top">
+    <hr>
+    <div class="section">
         <div class="Liz-container Liz-margin-vertical-lg">
             <div class="Liz-flex">
-                <div class="Liz-flex-1 Liz-border-right Liz-text-center">
+                <div class="Liz-flex-1 Liz-border-right">
                     <img src="images/page1/logo1.png" alt="">
                 </div>
                 <div class="Liz-flex-1 Liz-border-right Liz-text-center">nn
@@ -156,15 +175,16 @@
                 <div class="Liz-flex-1 Liz-border-horizontal Liz-text-center">
                     <img src="images/page1/logo4.png" alt="">
                 </div>
-                <div class="Liz-flex-1 Liz-text-center">
+                <div class="Liz-flex-1 text-right">
                     <img src="images/page1/logo5.png" alt="">
                 </div>
             </div>
         </div>
     </div>
     <!-- footor -->
-    <div class="section Liz-border-vertical Liz-bg-default">
-        <div class="Liz-container Liz-margin-vertical-lg">
+    <hr>
+    <div class="section Liz-bg-default">
+        <div class="Liz-container Liz-padding-vertical-lg">
             <div class="Liz-flex  Liz-flex-justify-center">
                 <img src="images\page1\top.png">
             </div>
@@ -224,7 +244,8 @@
             </div>
         </div>
     </footer>
-    <div class="section Liz-border-top">
+    <hr>
+    <div class="section">
         <div class="Liz-container Liz-margin-vertical-lg Liz-flex">
             <div class="Liz-flex-1">
                 <img src="images\page1\copy.png" class="img-responsive ">
