--- a/groupIntro.html
+++ b/groupIntro.html
@@ -52,18 +52,24 @@
         <img src="images\page1\bg-header.png" class="img-responsive">
     </div>
     <div class="section">
-        <div class="Liz-container Liz-margin-vertical-lg">
-            <span>home&gt;集团介绍</span>
+        <div class="Liz-container">
+            <ol class="breadcrumb2">
+              <li><a href="#">HOME</a></li>
+              <li class="active">集团介绍</li>
+            </ol>
         </div>
+        
     </div>
+    <hr>
     <!--group culture  -->
-    <div class="section Liz-border-vertical">
-        <div class="Liz-container Liz-margin-vertical-lg">
+    <div class="section">
+        <div class="Liz-container Liz-padding-vertical-lg">
             <div class="Liz-flex  Liz-flex-justify-center">
                 <img src="images\page1\group culture.png">
             </div>
         </div>
     </div>
+    <hr>
     <div class="section Liz-flex">
         <div class="Liz-flex-1 Liz-flex Liz-flex-justify-right Liz-flex-align-center" style="margin:20px 0;">
             <div style="width: 600px;height:600px;overflow:auto;    " class="Liz-scroll">
@@ -113,13 +119,15 @@ c)  快速学习，快速改进（核心是快速改进）
         </div>
     </div>
     <!-- development history -->
-    <div class="section Liz-border-vertical">
-        <div class="Liz-container Liz-margin-vertical-lg">
+    <hr>
+    <div class="section">
+        <div class="Liz-container Liz-padding-vertical-lg">
             <div class="Liz-flex  Liz-flex-justify-center">
                 <img src="images\page1\development history.png">
             </div>
         </div>
     </div>
+    <hr>
     <div class="section">
         <div class="Liz-container Liz-flex-align-bottom Liz-flex-row-reverse">
             <img src="images/page1/line.png" class=" Liz-line Liz-flex-1" alt="">
@@ -128,7 +136,7 @@ c)  快速学习，快速改进（核心是快速改进）
                 <li class="Liz-flex-1"></li>
                 <li class="Liz-flex-1 lineListContent Liz-pointer">2013</li>
                 <li class="Liz-flex-1 lineListContent Liz-pointer">2013</li>
-                <li class="Liz-flex-1 lineListContent Liz-pointer action">2013</li>
+                <li class="Liz-flex-1 lineListContent Liz-pointer active">2013</li>
                 <li class="Liz-flex-1 lineListContent Liz-pointer">2013</li>
                 <li class="Liz-flex-1 lineListContent Liz-pointer">2013</li>
                 <li class="Liz-flex-1 lineListContent Liz-pointer">2013</li>
@@ -138,8 +146,9 @@ c)  快速学习，快速改进（核心是快速改进）
         </div>
     </div>
     <!-- group honor -->
-    <div class="section Liz-border-vertical">
-        <div class="Liz-container Liz-margin-vertical-lg">
+    <hr>
+    <div class="section">
+        <div class="Liz-container Liz-padding-vertical-lg">
             <div class="Liz-flex  Liz-flex-justify-center">
                 <img src="images\page1\group honor.png">
             </div>
@@ -172,27 +181,37 @@ c)  快速学习，快速改进（核心是快速改进）
         </div>
     </div>
     <!-- chairman -->
-    <div class="section Liz-border-vertical">
-        <div class="Liz-container Liz-margin-vertical-lg">
+    <hr>
+    <div class="section">
+        <div class="Liz-container Liz-padding-vertical-lg">
             <div class="Liz-flex  Liz-flex-justify-center">
                 <img src="images\page1\chairman.png">
             </div>
         </div>
     </div>
-
+<hr>
 
 <div class="section Liz-flex">
     <div class="Liz-flex-1">
         <img src="images/page1/boss.png" alt="" style="height: 640px;width: 100%;">
     </div>
     <div class="Liz-flex-1">
-        <ul class="Liz-flex Liz-text-center Liz-chairman-nav Liz-padding-vertical-lg" style="width:618px">
-            <li class="Liz-flex-1 active">home</li>
-            <li class="Liz-flex-1">home</li>
-            <li class="Liz-flex-1">home</li>
+        <ul class="navs Liz-flex Liz-flex-justify-center" role="tablist" style="width:618px">
+              <li role="presentation" class="active">
+                  <a href="#dream" aria-controls="home" role="tab" data-toggle="pill">筑梦卓尚</a>
+              </li>
+              <li role="presentation">
+                  <a href="#center" aria-controls="profile" role="tab" data-toggle="pill">以终端运营为中心</a>
+              </li>
+              <li role="presentation">
+                  <a href="#hold" aria-controls="settings" role="tab" data-toggle="pill">以不变应万变</a>
+              </li>
         </ul>
+
         <hr style="border-color:rgba(192,192,192,1);">
-        <div class="text Liz-scroll"  style="width: 600px;overflow:auto;margin: 29px 0;padding:0 30px;height: 510px;">
+        <div class="text Liz-scroll" style="width: 600px;overflow:auto;padding:0 30px;height: 482px;margin: 20px 0;">
+         <div class="tab-content">
+            <div role="tabpanel" class="tab-pane active fade in" id="dream">
              <pre>
 服装道路，义无反顾
 作为一个没有服装行业工作经验的创业者，能从下岗工人一路走到现在，我始终心怀感恩感谢这一路给我帮助、与我同行的所有人。很多人问我，是什么力量支撑我一直坚持服装行业，其实，也有很多服装行业的人转行，我始终坚持并不是因为我的兴趣和爱好，而是因为责任，是因为需要。如果说只有相信自己会成功的人才会成功，那我愿意做一个自信的人，我不怕被同行打败，因为他们是拿兴趣玩儿，而我是在拿命玩儿。
@@ -205,18 +224,21 @@ c)  快速学习，快速改进（核心是快速改进）
 但从另一方面来讲，梦想如果只停留在脑海中那只能算空想，梦想需要落地、需要践行。在践行梦想的过程中，我们要不断地拓宽视野、不断地充实自己、不断地内向归因、反思自己。对于改变不了的事情，不抱怨、不埋怨，对于可以改变的事情，全心关注、全力以赴。付出总得需要时间来证明回报，而我们迈出的每一步都需要想明白三个问题——你拥有什么？你想得到什么？你愿意失去什么？
 
 在卓尚成为服装帝国的道路上，我们需要正确的同路人，换句话说，只要你是奋斗者，我们愿意与你共享未来！
-
              </pre>
+            </div>
+            <div role="tabpanel" class="tab-pane fade" id="center"><pre>center</pre></div>
+            <div role="tabpanel" class="tab-pane fade" id="hold"><pre>hold</pre></div>
+        </div>
         </div>
     </div>
 
 </div>
-
+<hr>
     <!-- 品牌 -->
     <div class="section">
         <div class="Liz-container Liz-margin-vertical-lg">
             <div class="Liz-flex">
-                <div class="Liz-flex-1 Liz-border-right Liz-text-center">
+                <div class="Liz-flex-1 Liz-border-right">
                     <img src="images/page1/logo1.png" alt="">
                 </div>
                 <div class="Liz-flex-1 Liz-border-right Liz-text-center">nn
@@ -228,20 +250,22 @@ c)  快速学习，快速改进（核心是快速改进）
                 <div class="Liz-flex-1 Liz-border-horizontal Liz-text-center">
                     <img src="images/page1/logo4.png" alt="">
                 </div>
-                <div class="Liz-flex-1 Liz-text-center">
+                <div class="Liz-flex-1 text-right">
                     <img src="images/page1/logo5.png" alt="">
                 </div>
             </div>
         </div>
     </div>
     <!-- footor -->
-    <div class="section Liz-border-vertical Liz-bg-default">
-        <div class="Liz-container Liz-margin-vertical-lg">
+    <hr>
+    <div class="section Liz-bg-default">
+        <div class="Liz-container Liz-padding-vertical-lg">
             <div class="Liz-flex  Liz-flex-justify-center">
                 <img src="images\page1\top.png">
             </div>
         </div>
     </div>
+    <hr>
     <footer class="section">
         <div class="Liz-container Liz-padding-vertical-lg">
             <div class="Liz-flex">
@@ -296,7 +320,8 @@ c)  快速学习，快速改进（核心是快速改进）
             </div>
         </div>
     </footer>
-    <div class="section Liz-border-top">
+    <hr>
+    <div class="section">
         <div class="Liz-container Liz-margin-vertical-lg Liz-flex">
             <div class="Liz-flex-1">
                 <img src="images\page1\copy.png" class="img-responsive ">
