--- a/learn.html
+++ b/learn.html
@@ -52,17 +52,36 @@
         </div>
         <!-- <img src="images\page1\bg-header.png" class="img-responsive"> -->
     </div>
-    <div class="section Liz-border-bottom">
-        <div class="Liz-container Liz-margin-vertical-lg">
-            <span>HOME&gt;人才发展&gt;学习发展 </span>
+    <div class="section">
+        <div class="Liz-container">
+            <ol class="breadcrumb2">
+              <li><a href="#">HOME</a></li>
+              <li><a href="#">人才发展</a></li>
+              <li class="active">学习发展</li>
+            </ol>
         </div>
+        <hr>
     </div>
-    <div class="section Liz-container Liz-devel-nav Liz-margin-vertical-lg Liz-flex Liz-text-center ">
-        <li class="Liz-flex-1">加入我们</li>
-        <li class="Liz-flex-1">薪酬福利</li>
-        <li class="Liz-flex-1 active">学习发展</li>
+    <div class="section">
+         <div class="Liz-container">
+                <!-- Nav tabs -->
+                <ul class="navs Liz-flex Liz-flex-justify-center" role="tablist">
+                  <li role="presentation" class="active">
+                      <a aria-controls="home" role="tab" data-toggle="pill">加入我们</a>
+                  </li>
+                  <li role="presentation">
+                      <a aria-controls="profile" role="tab" data-toggle="pill">薪酬福利</a>
+                  </li>
+                  <li role="presentation">
+                      <a aria-controls="settings" role="tab" data-toggle="pill">学习发展</a>
+                  </li>
+                </ul>
+            </div>
     </div>
-    <div class="section   Liz-border-top Liz-padding-vertical-lg">
+    
+
+<hr>
+    <div class="section Liz-padding-vertical-lg">
         <div class="Liz-container Liz-flex Liz-flex-column">
             <div class="Liz-flex-1 Liz-flex  Liz-margin-vertical-lg">
                 <div class="Liz-flex-1 Liz-flex">
@@ -115,10 +134,11 @@
         </div>
     </div>
     <!-- 品牌 -->
-    <div class="section Liz-border-top">
+    <hr>
+    <div class="section">
         <div class="Liz-container Liz-margin-vertical-lg">
             <div class="Liz-flex">
-                <div class="Liz-flex-1 Liz-border-right Liz-text-center">
+                <div class="Liz-flex-1 Liz-border-right">
                     <img src="images/page1/logo1.png" alt="">
                 </div>
                 <div class="Liz-flex-1 Liz-border-right Liz-text-center">nn
@@ -130,15 +150,16 @@
                 <div class="Liz-flex-1 Liz-border-horizontal Liz-text-center">
                     <img src="images/page1/logo4.png" alt="">
                 </div>
-                <div class="Liz-flex-1 Liz-text-center">
+                <div class="Liz-flex-1 text-right">
                     <img src="images/page1/logo5.png" alt="">
                 </div>
             </div>
         </div>
     </div>
     <!-- footor -->
-    <div class="section Liz-border-vertical Liz-bg-default">
-        <div class="Liz-container Liz-margin-vertical-lg">
+    <hr>
+    <div class="section Liz-bg-default">
+        <div class="Liz-container Liz-padding-vertical-lg">
             <div class="Liz-flex  Liz-flex-justify-center">
                 <img src="images\page1\top.png">
             </div>
@@ -198,7 +219,8 @@
             </div>
         </div>
     </footer>
-    <div class="section Liz-border-top">
+    <hr>
+    <div class="section">
         <div class="Liz-container Liz-margin-vertical-lg Liz-flex">
             <div class="Liz-flex-1">
                 <img src="images\page1\copy.png" class="img-responsive ">
