--- a/subbrand.html
+++ b/subbrand.html
@@ -53,13 +53,16 @@
         </div>
         <!-- <img src="images\page1\bg-header.png" class="img-responsive"> -->
     </div>
-    <div class="section Liz-border-bottom">
-        <div class="Liz-container Liz-margin-vertical-lg">
-            <span>HOME&gt;旗下品牌</span>
+
+<div class="section">
+        <div class="Liz-container">
+            <ol class="breadcrumb2">
+              <li><a href="#">HOME</a></li>
+              <li class="active">旗下品牌</li>
+            </ol>
         </div>
+        <hr>
     </div>
-
-
 <div class="section Liz-container Liz-margin-vertical-lg Liz-flex ">
 <div class="Liz-flex-1 Liz-flex-column ">
 <div class="Liz-flex-1 logo1-box"></div>
@@ -72,21 +75,12 @@
 </div>
 	
 </div>
-
-
-
-
-
-
-
-
-
-
-        <!-- 品牌 -->
+<hr>
+    <!-- 品牌 -->
     <div class="section">
         <div class="Liz-container Liz-margin-vertical-lg">
             <div class="Liz-flex">
-                <div class="Liz-flex-1 Liz-border-right Liz-text-center">
+                <div class="Liz-flex-1 Liz-border-right">
                     <img src="images/page1/logo1.png" alt="">
                 </div>
                 <div class="Liz-flex-1 Liz-border-right Liz-text-center">nn
@@ -98,77 +92,22 @@
                 <div class="Liz-flex-1 Liz-border-horizontal Liz-text-center">
                     <img src="images/page1/logo4.png" alt="">
                 </div>
-                <div class="Liz-flex-1 Liz-text-center">
+                <div class="Liz-flex-1 text-right">
                     <img src="images/page1/logo5.png" alt="">
                 </div>
             </div>
         </div>
     </div>
     <!-- footor -->
-    <div class="section Liz-border-vertical Liz-bg-default">
-        <div class="Liz-container Liz-margin-vertical-lg">
+    <hr>
+    <div class="section Liz-bg-default">
+        <div class="Liz-container Liz-padding-vertical-lg">
             <div class="Liz-flex  Liz-flex-justify-center">
                 <img src="images\page1\top.png">
             </div>
         </div>
     </div>
-    <footer class="section">
-        <div class="Liz-container Liz-padding-vertical-lg">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <ul class="footList">
-                                <li class="Liz-text-lg">One</li>
-                                <li class="Liz-border-bottom"></li>
-                                <li>Three</li>
-                                <li>One</li>
-                                <li>Two</li>
-                                <li>Three</li>
-                            </ul>
-                        </div>
-                        <div class="col-md-3">
-                            <ul class="footList">
-                                <li class="Liz-text-lg">One</li>
-                                <li class="Liz-border-bottom"></li>
-                                <li>Three</li>
-                                <li>One</li>
-                                <li>Two</li>
-                                <li>Three</li>
-                            </ul>
-                        </div>
-                        <div class="col-md-3">
-                            <ul class="footList">
-                                <li class="Liz-text-lg">One</li>
-                                <li class="Liz-border-bottom"></li>
-                                <li>Three</li>
-                                <li>One</li>
-                                <li>Two</li>
-                                <li>Three</li>
-                            </ul>
-                        </div>
-                        <div class="col-md-3">
-                            <ul class="footList">
-                                <li class="Liz-text-lg">One</li>
-                                <li class="Liz-border-bottom"></li>
-                                <li>Three</li>
-                                <li>One</li>
-                                <li>Two</li>
-                                <li>Three</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-sm-offset-3">
-                    <a href="#" class="Liz-cf"><img src="images\page1\footor-logo.png" class="img-responsive Liz-fr"></a>
-                    <br>
-                    <a href="#" class="Liz-cf"><img src="images\page1\address.png" class="img-responsive Liz-fr"></a>
-                    <br>
-                    <a href="#" class="Liz-cf"><img src="images\page1\phone.png" class="img-responsive Liz-fr"></a>
-                </div>
-            </div>
-        </div>
-    </footer> <footer class="section">
+     <footer class="section">
         <div class="Liz-container Liz-padding-vertical-lg">
             <div class="Liz-flex">
                 <div class="Liz-flex-1 Liz-flex">
@@ -222,7 +161,8 @@
             </div>
         </div>
     </footer>
-    <div class="section Liz-border-top">
+    <hr>
+    <div class="section">
         <div class="Liz-container Liz-margin-vertical-lg Liz-flex">
             <div class="Liz-flex-1">
                 <img src="images\page1\copy.png" class="img-responsive ">
