--- a/groupIntro.html
+++ b/groupIntro.html
@@ -155,16 +155,189 @@ c)  快速学习，快速改进（核心是快速改进）
         </div>
     </div>
     <div class="section Liz-bg-default">
-        <div class="Liz-container">
-            <div class="row">
-                <div class="col-md-12">
+        <div class="Liz-container Liz-flex">
                     <div id="slider">
                         <ul style="left:-1200px">
-                            <li><img src="images\page1\s5.jpg" width="1200px" height="423px"></li>
-                            <li><img src="images\page1\s1.jpg" width="1200px" height="423px"></li>
-                            <li><img src="images\page1\s2.jpg" width="1200px" height="423px"></li>
-                            <li><img src="images\page1\s5.jpg" width="1200px" height="423px"></li>
-                            <li><img src="images\page1\s1.jpg" width="1200px" height="423px"></li>
+                            <li width="1200px" height="272px">
+                                <table class="table Liz-margin-vertical-lg" >
+                                    <tr>
+                                        <th>2015</th>
+                                        <td>“三彩”被评为浙江省著名商标</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>中国服装协会第六理事会理事单位</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>杭州市著名商标</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>新下沙人文化家园</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>绿叶奖</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>杭州市高新技术企业</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2013</th>
+                                        <td>ibudu 2012年度十大女装品牌</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2012</th>
+                                        <td>供应链联盟战略合作伙伴</td>
+                                    </tr>
+                                </table>
+                            </li>
+                            <li width="1200px" height="272px">
+                                <table class="table Liz-margin-vertical-lg" >
+                                    <tr>
+                                        <th>2015</th>
+                                        <td>“三彩”被评为浙江省著名商标</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>中国服装协会第六理事会理事单位</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>杭州市著名商标</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>新下沙人文化家园</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>绿叶奖</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>杭州市高新技术企业</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2013</th>
+                                        <td>ibudu 2012年度十大女装品牌</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2012</th>
+                                        <td>供应链联盟战略合作伙伴</td>
+                                    </tr>
+                                </table>
+                            </li>
+                            <li width="1200px" height="272px">
+                                <table class="table Liz-margin-vertical-lg" >
+                                    <tr>
+                                        <th>2015</th>
+                                        <td>“三彩”被评为浙江省著名商标</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>中国服装协会第六理事会理事单位</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>杭州市著名商标</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>新下沙人文化家园</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>绿叶奖</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>杭州市高新技术企业</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2013</th>
+                                        <td>ibudu 2012年度十大女装品牌</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2012</th>
+                                        <td>供应链联盟战略合作伙伴</td>
+                                    </tr>
+                                </table>
+                            </li>
+                            <li width="1200px" height="272px">
+                                <table class="table Liz-margin-vertical-lg" >
+                                    <tr>
+                                        <th>2015</th>
+                                        <td>“三彩”被评为浙江省著名商标</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>中国服装协会第六理事会理事单位</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>杭州市著名商标</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>新下沙人文化家园</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>绿叶奖</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>杭州市高新技术企业</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2013</th>
+                                        <td>ibudu 2012年度十大女装品牌</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2012</th>
+                                        <td>供应链联盟战略合作伙伴</td>
+                                    </tr>
+                                </table>
+                            </li>
+                            <li width="1200px" height="272px">
+                                <table class="table Liz-margin-vertical-lg" >
+                                    <tr>
+                                        <th>2015</th>
+                                        <td>“三彩”被评为浙江省著名商标</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>中国服装协会第六理事会理事单位</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>杭州市著名商标</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>新下沙人文化家园</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>绿叶奖</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2014</th>
+                                        <td>杭州市高新技术企业</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2013</th>
+                                        <td>ibudu 2012年度十大女装品牌</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2012</th>
+                                        <td>供应链联盟战略合作伙伴</td>
+                                    </tr>
+                                </table>
+                            </li>
                         </ul>
                         <div id="point">
                             <span index="1" class="on"></span>
@@ -176,8 +349,6 @@ c)  快速学习，快速改进（核心是快速改进）
                     </div>
                     <div id="arrow_l">
                     </div>
-                </div>
-            </div>
         </div>
     </div>
     <!-- chairman -->
