--- a/groupIntro.html
+++ b/groupIntro.html
@@ -26,8 +26,8 @@
             <div class="Liz-flex-1">
                 <ul class="Liz-flex Liz-header-nav">
                     <li class="active dropdown Liz-flex-1">
-                        <a href="#" class=" dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">关于卓尚</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <a href="#" class=" dropdown-toggle">关于卓尚</a>
+                        <ul class="dropdown-menu">
                             <li><a href="#">集团文化</a></li>
                             <li><a href="#">发展历史</a></li>
                             <li><a href="#">集团荣誉</a></li>
@@ -49,7 +49,6 @@
                 </ul>
             </div>
         </div>
-        <img src="images\page1\bg-header.png" class="img-responsive">
     </div>
     <div class="section">
         <div class="Liz-container">
@@ -506,6 +505,7 @@ c)  快速学习，快速改进（核心是快速改进）
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/groupIntro.js"></script>
+    <script type="text/javascript" src="js/base.js"></script>
 </body>
 
 </html>
