--- a/development.html
+++ b/development.html
@@ -18,15 +18,15 @@
 
 <body>
     <div class="section">
-        <div class="Liz-flex" style="padding: 0 20px;">
+        <div class="Liz-flex"  style="padding: 0 20px;">
             <div class="Liz-flex-1 Liz-padding-vertical-lg">
-                <img src="images/page1/logo.png" alt="">
+                <img src="images/page1/logo.png" alt="" >
             </div>
             <div class="Liz-flex-1">
                 <ul class="Liz-flex Liz-header-nav">
                     <li class="active dropdown Liz-flex-1">
-                        <a href="#" class=" dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">关于卓尚</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <a href="#" class=" dropdown-toggle">关于卓尚</a>
+                        <ul class="dropdown-menu">
                             <li><a href="#">集团文化</a></li>
                             <li><a href="#">发展历史</a></li>
                             <li><a href="#">集团荣誉</a></li>
@@ -48,9 +48,6 @@
                 </ul>
             </div>
         </div>
-        <div class="bgBox">
-        </div>
-        <!-- <img src="images\page1\bg-header.png" class="img-responsive"> -->
     </div>
     <div class="section">
         <div class="Liz-container">
@@ -258,6 +255,7 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/development.js"></script>
+    <script type="text/javascript" src="js/base.js"></script>
     <script>
     </script>
 </body>
