--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
                     </ul>
                 </div>
             </div>
-            <img src="images\page7\bg-header.png" class="img-responsive">
         </div>
 
         <!-- NEW & EVENTS -->
@@ -263,5 +262,6 @@
         <script src="js/owl.carousel.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/index.js"></script>
+        <script type="text/javascript" src="js/base.js"></script>
     </body>
 </html>
