--- a/learn.html
+++ b/learn.html
@@ -232,6 +232,7 @@
     </div>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/base.js"></script>
     <script>
     </script>
 </body>
