--- a/news.html
+++ b/news.html
@@ -288,5 +288,6 @@
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/news.js"></script>
+        <script type="text/javascript" src="js/base.js"></script>
     </body>
 </html>
