--- a/newsDetail.html
+++ b/newsDetail.html
@@ -223,5 +223,6 @@
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/newsDetail.js"></script>
+        <script type="text/javascript" src="js/base.js"></script>
     </body>
 </html>
