--- a/subbrand.html
+++ b/subbrand.html
@@ -175,6 +175,7 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/sub-brand.js"></script>
+    <script type="text/javascript" src="js/base.js"></script>
     <script>
 
 </script>
