--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </head>
     <body>
         <!-- Header -->
-        <div class="header">
+        <div id="header" class="header">
             <!-- 菜单栏 -->
-            <div class="Liz-navbar">
+            <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
                 <div class="Liz-flex Liz-flex-align-center">
                     <div class="Liz-flex-1">
                         <img src="images/page1/logo.png" width="109px">
@@ -57,10 +57,11 @@
                 </div>
             </div>
             <div class="navicon">
-                <a class="nav-slide-btn" href="#" id="nav-toggle">
+                <a id="nav-toggle" href="#" class="nav-toggle">
                     <span></span>
                 </a>
             </div>
+            <div class="overlayer active"></div>
         </div>
 
         <div class="animation-slide-up">
@@ -170,6 +171,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="opacity0 Liz-border-vertical" id="footer">
                 <!-- 品牌 -->
                 <div class="Liz-container Liz-margin-vertical-lg">
@@ -268,22 +270,12 @@
                 </div>
             </div>
         </div>
-    </footer>
-    <hr>
-    <div class="section">
-        <div class="Liz-container Liz-margin-vertical-lg Liz-flex">
-            <div class="Liz-flex-1">
-                <img src="images\page1\copy.png" class="img-responsive ">
-            </div>
-            <div class="Liz-flex-1">
-                <img src="images\page1\design.png" class="img-responsive Liz-fr">
-            </div>
-        </div>
-    </div>
 
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <script src="js/owl.carousel.min.js"></script>
         <script src="js/jquery.waypoints.min.js"></script>
+        <script src="js/headroom.min.js"></script>
+        <script src="js/jquery.headroom.min.js"></script>
         <script src="js/index.js"></script>
     </body>
 </html>
