--- a/webstore.html
+++ b/webstore.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>index</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/sub-brand.css">
+    <link rel="stylesheet" href="css/webstore.css">
     <link rel="stylesheet" href="css/base.css">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
@@ -65,13 +65,23 @@
 
 <div class="section Liz-container Liz-margin-vertical-lg Liz-flex ">
 <div class="Liz-flex-1 Liz-flex-column ">
-<div class="Liz-flex-1 logo1-box"></div>
-<div class="Liz-flex-1 logo2-box"></div>
-<div class="Liz-flex-1 logo3-box"></div>
+<div class="Liz-flex-1 logo1-box">
+    <div class="log1"></div>
+</div>
+<div class="Liz-flex-1 logo2-box">
+    <div class="log2"></div>
+</div>
+<div class="Liz-flex-1 logo3-box">
+    <div class="log3"></div>
+</div>
 </div>
 <div class="Liz-flex-1 Liz-flex-column">
-<div class="Liz-flex-1 logo4-box"></div>
-<div class="Liz-flex-1 logo5-box"></div>
+<div class="Liz-flex-1 logo4-box">
+    <div class="log4"></div>
+</div>
+<div class="Liz-flex-1 logo5-box">
+    <div class="log5"></div>
+</div>
 </div>
 	
 </div>
