--- a/development.html
+++ b/development.html
@@ -97,7 +97,7 @@
 <pre  class="Liz-text-white">首席设计师      Chief designer</pre>
                         </a>
                         <div class="Liz-flex-1 Liz-fullWidth">
-                        <img src="images/page4/massage1.png" alt="" class="Liz-fr Liz-massage">
+                            <a href="http://www.hotjob.cn/wt/zhuoshang/web/index"><img src="images/page4/massage1.png" alt="" class="Liz-fr Liz-massage"></a>
                         </div>
                   </h4>
                 </div>
@@ -118,7 +118,7 @@
 <pre class="Liz-text-black">设计助理      Design assistant</pre>
                         </a>
                         <div class="Liz-flex-1 Liz-fullWidth">
-                            <img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage">
+                            <a href="http://www.hotjob.cn/wt/zhuoshang/web/index"><img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage"></a>
                         </div>
                       </h4>
                 </div>
@@ -139,7 +139,7 @@
 <pre class="Liz-text-black">拓展主管      Development director</pre>
                     </a>
                      <div class="Liz-flex-1 Liz-fullWidth">
-                        <img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage">
+                        <a href="http://www.hotjob.cn/wt/zhuoshang/web/index"><img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage"></a>
                     </div>
                   </h4>
                 </div>
