--- a/webstore.html
+++ b/webstore.html
@@ -66,32 +66,25 @@
 <div class="section Liz-container Liz-margin-vertical-lg Liz-flex ">
 <div class="Liz-flex-1 Liz-flex-column ">
 <div class="Liz-flex-1 logo1-box">
-    <div class="log1"></div>
+    <a href="#"><div class="log1"></div></a>
 </div>
 <div class="Liz-flex-1 logo2-box">
-    <div class="log2"></div>
+    <a href="#"><div class="log2"></div></a>
 </div>
 <div class="Liz-flex-1 logo3-box">
-    <div class="log3"></div>
+    <a href="#"><div class="log3"></div></a>
 </div>
 </div>
 <div class="Liz-flex-1 Liz-flex-column">
 <div class="Liz-flex-1 logo4-box">
-    <div class="log4"></div>
+    <a href="#"><div class="log4"></div></a>
 </div>
 <div class="Liz-flex-1 logo5-box">
-    <div class="log5"></div>
+    <a href="#"><div class="log5"></div></a>
 </div>
 </div>
 	
 </div>
-
-
-
-
-
-
-
 
 
 <hr>
