--- a/groupIntro.html
+++ b/groupIntro.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/groupIntro.css">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/animation.css">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
   <script src="js/html5shiv.js"></script>
