--- a/main.html
+++ b/main.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>index</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <div class="Liz-flex Liz-main-container Liz-flex-column Liz-flex-align-between">
     <img src="images/page2/bg-1.png" alt="" class="Liz-img Liz-img1">
