--- a/newsDetail.html
+++ b/newsDetail.html
@@ -16,7 +16,7 @@
 </head>
     <body>
         <!-- 菜单栏 -->
-        <div class="section">
+        <div class="section" id="header">
             <div class="Liz-flex Liz-flex-align-center"  style="padding: 0 20px;">
                 <div class="Liz-flex-1 Liz-padding-vertical-lg">
                     <img src="images/page1/logo.png" alt="" >
@@ -121,44 +121,41 @@
                 </div>
             </div>
         </div>
-
-<hr>
-
-    <!-- 品牌 -->
-    <div class="section">
-        <div class="Liz-container Liz-margin-vertical-lg">
-            <div class="Liz-flex">
-                <div class="Liz-flex-1 Liz-border-right">
-                    <img src="images/page1/logo1.png" alt="">
-                </div>
-                <div class="Liz-flex-1 Liz-border-right Liz-text-center">nn
-                    <img src="images/page1/logo2.png" alt="">
-                </div>
-                <div class="Liz-flex-1 Liz-text-center">
-                    <img src="images/page1/logo3.png" alt="">
-                </div>
-                <div class="Liz-flex-1 Liz-border-horizontal Liz-text-center">
-                    <img src="images/page1/logo4.png" alt="">
-                </div>
-                <div class="Liz-flex-1 text-right">
-                    <img src="images/page1/logo5.png" alt="">
+        <div class="Liz-border-vertical" id="footer">
+            <!-- 品牌 -->
+            <div class="section">
+                <div class="Liz-container Liz-margin-vertical-lg">
+                    <div class="Liz-flex">
+                        <div class="Liz-flex-1 Liz-border-right">
+                            <img src="images/page1/logo1.png" alt="">
+                        </div>
+                        <div class="Liz-flex-1 Liz-border-right Liz-text-center">nn
+                            <img src="images/page1/logo2.png" alt="">
+                        </div>
+                        <div class="Liz-flex-1 Liz-text-center">
+                            <img src="images/page1/logo3.png" alt="">
+                        </div>
+                        <div class="Liz-flex-1 Liz-border-horizontal Liz-text-center">
+                            <img src="images/page1/logo4.png" alt="">
+                        </div>
+                        <div class="Liz-flex-1 text-right">
+                            <img src="images/page1/logo5.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <!-- footor -->
-    <hr>
-    <div class="section Liz-bg-default">
-        <div class="Liz-container Liz-padding-vertical-lg">
-            <div class="Liz-flex  Liz-flex-justify-center">
-                <img src="images\page1\top.png">
+            <!-- footor -->
+            <div class="section Liz-border-vertical Liz-bg-default">
+                <div class="Liz-container Liz-margin-vertical-lg">
+                    <div class="Liz-flex  Liz-flex-justify-center">
+                        <img id="go-header" class="go-header" src="images\page1\top.png">
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-     <footer class="section">
-        <div class="Liz-container Liz-padding-vertical-lg">
-            <div class="Liz-flex">
-                <div class="Liz-flex-1 Liz-flex">
+            <footer class="section">
+                <div class="Liz-container Liz-padding-vertical-lg">
+                    <div class="Liz-flex">
+                        <div class="Liz-flex-1 Liz-flex">
 
                             <ul class="footList Liz-flex-1">
                                 <li class="Liz-text-lg">关于卓尚</li>
@@ -195,31 +192,32 @@
                                 <li>薪酬福利</li>
                             </ul>
 
-                </div>
-                <div class="Liz-flex-1 Liz-flex Liz-flex-justify-right">
-                <div class="Liz-flex-1">
-                     <a href="#" class="Liz-cf"><img src="images\page1\footor-logo.png" class="img-responsive Liz-fr"></a>
-                    <br>
-                    <a href="#" class="Liz-cf"><img src="images\page1\address.png" class="img-responsive Liz-fr"></a>
-                    <br>
-                    <a href="#" class="Liz-cf"><img src="images\page1\phone.png" class="img-responsive Liz-fr"></a>
-                </div>
+                        </div>
+                        <div class="Liz-flex-1 Liz-flex Liz-flex-justify-right">
+                            <div class="Liz-flex-1">
+                                <a href="#" class="Liz-cf"><img src="images\page1\footor-logo.png" class="img-responsive Liz-fr"></a>
+                                <br>
+                                <a href="#" class="Liz-cf"><img src="images\page1\address.png" class="img-responsive Liz-fr"></a>
+                                <br>
+                                <a href="#" class="Liz-cf"><img src="images\page1\phone.png" class="img-responsive Liz-fr"></a>
+                            </div>
 
+                        </div>
+                    </div>
+                </div>
+            </footer>
+            <hr>
+            <div class="section">
+                <div class="Liz-container Liz-margin-vertical-lg Liz-flex">
+                    <div class="Liz-flex-1">
+                        <img src="images\page1\copy.png" class="img-responsive ">
+                    </div>
+                    <div class="Liz-flex-1">
+                        <img src="images\page1\design.png" class="img-responsive Liz-fr">
+                    </div>
                 </div>
             </div>
         </div>
-    </footer>
-    <hr>
-    <div class="section">
-        <div class="Liz-container Liz-margin-vertical-lg Liz-flex">
-            <div class="Liz-flex-1">
-                <img src="images\page1\copy.png" class="img-responsive ">
-            </div>
-            <div class="Liz-flex-1">
-                <img src="images\page1\design.png" class="img-responsive Liz-fr">
-            </div>
-        </div>
-    </div>
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/newsDetail.js"></script>
