update time axis component

--- a/index.html
+++ b/index.html
@@ -77,8 +77,14 @@
             <!-- 首页滚动栏 -->
             <div id="section2">
                 <div class="Liz-container Liz-margin-vertical-lg">
-                    <span class="navigation-prev"></span>
-                    <span class="navigation-next"></span>
+                    <div class="navigation-prev">
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="navigation-next">
+                        <span></span>
+                        <span></span>
+                    </div>
 
                     <div id="carousel-wrap">
                         <div class="item card">
