--- a/groupIntro.html
+++ b/groupIntro.html
@@ -60,6 +60,12 @@
                 </ul>
             </div>
         </div>
+
+        <div class="navicon">
+            <a id="nav-toggle" href="#" class="nav-toggle">
+                <span></span>
+            </a>
+        </div>
     </div>
 
     <div class="animation-slide-up">
@@ -522,6 +528,8 @@ c)  快速学习，快速改进（核心是快速改进）
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/headroom.min.js"></script>
+    <script src="js/jquery.headroom.min.js"></script>
     <script type="text/javascript" src="js/base.js"></script>
     <script type="text/javascript" src="js/groupIntro.js"></script>
 </body>
