--- a/development.html
+++ b/development.html
@@ -5,32 +5,44 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>index</title>
+    <title>加入我们</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/development.css">
+    <link href="css/animation.css" rel="stylesheet">
+    <link href="css/base.css" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/development.css">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
-  <script src="js/html5shiv.js"></script>
-  <script src="js/respond.min.js"></script>
-<![endif]-->
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body>
-    <div class="section" id="header">
-        <div class="Liz-flex"  style="padding: 0 20px;">
-            <div class="Liz-flex-1 Liz-padding-vertical-lg">
-                <img src="images/page1/logo.png" alt="" >
-            </div>
-            <div class="Liz-flex-1">
-                <ul class="Liz-flex Liz-header-nav">
+    <!-- Header -->
+    <div id="header" class="header">
+        <!-- 菜单栏 -->
+        <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
+            <div class="Liz-flex Liz-flex-align-center">
+                <div class="Liz-flex-1">
+                    <img src="images/page1/logo.png" width="109px">
+                </div>
+                <ul class="Liz-flex Liz-flex-1 Liz-header-nav">
                     <li class="active dropdown Liz-flex-1">
-                        <a href="#" class=" dropdown-toggle">关于卓尚</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">集团文化</a></li>
-                            <li><a href="#">发展历史</a></li>
-                            <li><a href="#">集团荣誉</a></li>
-                            <li><a href="#">董事长致词</a></li>
+                        <a aria-expanded="false" aria-haspopup="true" class=" dropdown-toggle" data-toggle="dropdown" href="#" id="dropdownMenu1">关于卓尚</a>
+                        <ul aria-labelledby="dropdownMenu1" class="dropdown-menu">
+                            <li>
+                                <a href="#">集团文化</a>
+                            </li>
+                            <li>
+                                <a href="#">发展历史</a>
+                            </li>
+                            <li>
+                                <a href="#">集团荣誉</a>
+                            </li>
+                            <li>
+                                <a href="#">董事长致词</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="Liz-flex-1">
@@ -48,17 +60,15 @@
                 </ul>
             </div>
         </div>
-    </div>
-    <div class="section">
-        <div class="Liz-container">
-            <ol class="breadcrumb2">
-              <li><a href="#">HOME</a></li>
-              <li><a href="#">人才发展</a></li>
-              <li class="active">加入我们</li>
-            </ol>
+        <div class="navicon">
+            <a id="nav-toggle" href="#" class="nav-toggle">
+                <span></span>
+            </a>
         </div>
-        <hr>
+        <div class="overlayer active"></div>
     </div>
+
+
     <div class="section">
             <div class="Liz-container">
                 <!-- Nav tabs -->
@@ -81,7 +91,7 @@
         <div class="Liz-container Liz-flex Liz-margin-vertical-lg">
             <div class="Liz-flex-1">
                 <pre>
-使命：公司前进的每一步，无论是一大步还是一小步，都要带动行业发展的脚步 
+使命：公司前进的每一步，无论是一大步还是一小步，都要带动行业发展的脚步
 愿景：成为对国家、对社会、有价值、有贡献、负责任的企业
 目标：成为对国家、对社会、有价值、</pre>
             </div>
@@ -104,9 +114,9 @@
                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                     <div class="panel-body Liz-border-0 Liz-container">
                         <pre>
-1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；  
+1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
 2、把握市场流行趋势，收集国内外潮流信息，了解国内外服
-1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；  
+1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
 2、把握市场流行趋势，收集国内外潮流信息，了解国内外服</pre>
                     </div>
                 </div>
@@ -125,9 +135,9 @@
                 <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                     <div class="panel-body Liz-border-0 Liz-container">
                         <pre>
-1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；  
+1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
 2、把握市场流行趋势，收集国内外潮流信息，了解国内外服
-1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；  
+1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
 2、把握市场流行趋势，收集国内外潮流信息，了解国内外服</pre>
                     </div>
                 </div>
@@ -146,9 +156,9 @@
                 <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                     <div class="panel-body Liz-border-0 Liz-container">
                         <pre>
-1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；  
+1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
 2、把握市场流行趋势，收集国内外潮流信息，了解国内外服
-1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；  
+1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
 2、把握市场流行趋势，收集国内外潮流信息，了解国内外服</pre>
                     </div>
                 </div>
@@ -255,9 +265,10 @@
         </div>
     </div>
     <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/development.js"></script>
+    <script src="js/headroom.min.js"></script>
+    <script src="js/jquery.headroom.min.js"></script>
     <script type="text/javascript" src="js/base.js"></script>
+    <script type="text/javascript" src="js/development.js"></script>
     <script>
     </script>
 </body>
