--- a/news.html
+++ b/news.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/animation.css" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/news.css">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
@@ -15,21 +16,30 @@
 <![endif]-->
 </head>
     <body>
-        <!-- 菜单栏 -->
-        <div class="section" id="header">
-            <div class="Liz-flex"  style="padding: 0 20px;">
-                <div class="Liz-flex-1 Liz-padding-vertical-lg">
-                    <img src="images/page1/logo.png" alt="" >
-                </div>
-                <div class="Liz-flex-1">
-                    <ul class="Liz-flex Liz-header-nav">
+        <!-- Header -->
+        <div id="header" class="header">
+            <!-- 菜单栏 -->
+            <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
+                <div class="Liz-flex Liz-flex-align-center">
+                    <div class="Liz-flex-1">
+                        <img src="images/page1/logo.png" width="109px">
+                    </div>
+                    <ul class="Liz-flex Liz-flex-1 Liz-header-nav">
                         <li class="active dropdown Liz-flex-1">
-                            <a href="#" class=" dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">关于卓尚</a>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                <li><a href="#">集团文化</a></li>
-                                <li><a href="#">发展历史</a></li>
-                                <li><a href="#">集团荣誉</a></li>
-                                <li><a href="#">董事长致词</a></li>
+                            <a aria-expanded="false" aria-haspopup="true" class=" dropdown-toggle" data-toggle="dropdown" href="#" id="dropdownMenu1">关于卓尚</a>
+                            <ul aria-labelledby="dropdownMenu1" class="dropdown-menu">
+                                <li>
+                                    <a href="#">集团文化</a>
+                                </li>
+                                <li>
+                                    <a href="#">发展历史</a>
+                                </li>
+                                <li>
+                                    <a href="#">集团荣誉</a>
+                                </li>
+                                <li>
+                                    <a href="#">董事长致词</a>
+                                </li>
                             </ul>
                         </li>
                         <li class="Liz-flex-1">
@@ -47,8 +57,14 @@
                     </ul>
                 </div>
             </div>
-            <img src="images\page8\bg-header.png" class="img-responsive">
+            <div class="navicon">
+                <a id="nav-toggle" href="#" class="nav-toggle">
+                    <span></span>
+                </a>
+            </div>
+            <div class="overlayer active"></div>
         </div>
+
         <!-- 面包屑导航 -->
         <div class="section">
             <div class="Liz-container">
@@ -216,8 +232,9 @@
             </div>
         </div>
         <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/news.js"></script>
+        <script src="js/headroom.min.js"></script>
+        <script src="js/jquery.headroom.min.js"></script>
         <script type="text/javascript" src="js/base.js"></script>
+        <script src="js/news.js"></script>
     </body>
 </html>
