--- a/learn.html
+++ b/learn.html
@@ -66,14 +66,14 @@
          <div class="Liz-container">
                 <!-- Nav tabs -->
                 <ul class="navs Liz-flex Liz-flex-justify-center" role="tablist">
+                  <li role="presentation">
+                      <a aria-controls="home" role="tab" href="development.html">加入我们</a>
+                  </li>
+                  <li role="presentation">
+                      <a aria-controls="profile" role="tab" href="payment.html">薪酬福利</a>
+                  </li>
                   <li role="presentation" class="active">
-                      <a aria-controls="home" role="tab" data-toggle="pill">加入我们</a>
-                  </li>
-                  <li role="presentation">
-                      <a aria-controls="profile" role="tab" data-toggle="pill">薪酬福利</a>
-                  </li>
-                  <li role="presentation">
-                      <a aria-controls="settings" role="tab" data-toggle="pill">学习发展</a>
+                      <a aria-controls="settings" role="tab" href="#">学习发展</a>
                   </li>
                 </ul>
             </div>
@@ -202,7 +202,7 @@
                                 <li class="Liz-border-bottom"></li>
                                 <li>加入我们</li>
                                 <li>薪酬福利</li>
-                                <li>薪酬福利</li>
+                                <li>学习发展</li>
                             </ul>
 
                         </div>
