--- a/news.html
+++ b/news.html
@@ -176,7 +176,7 @@
                             <ul class="footList Liz-flex-1">
                                 <li class="Liz-text-lg">新闻中心</li>
                                 <li class="Liz-border-bottom"></li>
-                                <li>集团新闻</li>
+                                <li><a href="news.html">集团新闻</a></li>
                                 <li>公益事业</li>
                                 <li>员工关怀</li>
                             </ul>
@@ -184,9 +184,9 @@
                             <ul class="footList Liz-flex-1">
                                 <li class="Liz-text-lg">人才发展</li>
                                 <li class="Liz-border-bottom"></li>
-                                <li>加入我们</li>
-                                <li>薪酬福利</li>
-                                <li>薪酬福利</li>
+                                <li><a href="development.html">加入我们</a></li>
+                                <li><a href="payment.html">薪酬福利</a></li>
+                                <li><a href="learn.html">学习发展</a></li>
                             </ul>
 
                         </div>
