--- a/webstore.html
+++ b/webstore.html
@@ -154,7 +154,7 @@
                                 <li class="Liz-border-bottom"></li>
                                 <li>加入我们</li>
                                 <li>薪酬福利</li>
-                                <li>薪酬福利</li>
+                                <li>学习发展</li>
                             </ul>
 
                         </div>
