--- a/groupIntro.html
+++ b/groupIntro.html
@@ -20,7 +20,7 @@
 
 <body>
     <!-- Header -->
-    <div id="header" class="header">
+    <div id="header" class="header bgScreen">
         <!-- 菜单栏 -->
         <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
             <div class="Liz-flex Liz-flex-align-center">
@@ -66,6 +66,7 @@
                 <span></span>
             </a>
         </div>
+        <img src="images/page1/group.png" alt="" class="imgScreen">
     </div>
 
     <div class="animation-slide-up">
