--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <!-- Header -->
-        <div id="header" class="header">
+        <div id="header" class="header bgScreen">
             <!-- 菜单栏 -->
             <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
                 <div class="Liz-flex Liz-flex-align-center">
@@ -62,6 +62,7 @@
                 </a>
             </div>
             <div class="overlayer active"></div>
+            <img src="images/page7/spring2016.png" alt="" class="imgScreen">
         </div>
 
         <div class="animation-slide-up">
