--- a/learn.html
+++ b/learn.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div id="header" class="header">
+    <div id="header" class="header bgScreen">
         <!-- 菜单栏 -->
         <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
             <div class="Liz-flex Liz-flex-align-center">
@@ -64,6 +64,7 @@
             </a>
         </div>
         <div class="overlayer active"></div>
+        <img src="images/page4/talent.png" alt="" class="imgScreen">
     </div>
 
     <div class="section">
