--- a/subbrand.html
+++ b/subbrand.html
@@ -19,7 +19,7 @@
 <body>
 
     <!-- Header -->
-    <div id="header" class="header">
+    <div id="header" class="header bgScreen">
         <!-- 菜单栏 -->
         <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
             <div class="Liz-flex Liz-flex-align-center">
@@ -65,6 +65,7 @@
             </a>
         </div>
         <div class="overlayer active"></div>
+        <img src="images/page3/brand.png" alt="" class="imgScreen">
     </div>
 
 <div class="section">
