--- a/newsDetail.html
+++ b/newsDetail.html
@@ -17,7 +17,7 @@
 </head>
     <body>
         <!-- Header -->
-        <div id="header" class="header">
+        <div id="header" class="header bgScreen">
             <!-- 菜单栏 -->
             <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
                 <div class="Liz-flex Liz-flex-align-center">
@@ -63,6 +63,7 @@
                 </a>
             </div>
             <div class="overlayer active"></div>
+            <img src="images/page7/news.png" alt="" class="imgScreen">
         </div>
 
         <!-- 面包屑导航 -->
