update link of group

--- a/groupIntro.html
+++ b/groupIntro.html
@@ -32,16 +32,16 @@
                         <a aria-expanded="false" aria-haspopup="true" class=" dropdown-toggle" data-toggle="dropdown" href="#" id="dropdownMenu1">关于卓尚</a>
                         <ul aria-labelledby="dropdownMenu1" class="dropdown-menu">
                             <li>
-                                <a href="#">集团文化</a>
+                                <a href="./groupIntro.html#culture">集团文化</a>
                             </li>
                             <li>
-                                <a href="#">发展历史</a>
+                                <a href="./groupIntro.html#history">发展历史</a>
                             </li>
                             <li>
-                                <a href="#">集团荣誉</a>
+                                <a href="./groupIntro.html#honor">集团荣誉</a>
                             </li>
                             <li>
-                                <a href="#">董事长致词</a>
+                                <a href="./groupIntro.html#chairman">董事长致词</a>
                             </li>
                         </ul>
                     </li>
@@ -69,8 +69,8 @@
         <img src="images/page1/group.png" alt="" class="imgScreen">
     </div>
 
-    <div class="animation-slide-up">
-        <div class="section">
+    <div>
+        <div id="culture" class="section">
             <div class="Liz-container">
                 <ol class="breadcrumb2">
                     <li><a href="./index.html">HOME</a></li>
@@ -138,7 +138,7 @@ c)  快速学习，快速改进（核心是快速改进）
             <hr>
         </div>
         <!-- development history -->
-        <div class="section section1 opacity0">
+        <div id="history" class="section section1 opacity0">
             <div class="Liz-container Liz-padding-vertical-lg">
                 <div class="Liz-flex  Liz-flex-justify-center">
                     <img src="images\page1\development history.png">
@@ -166,7 +166,7 @@ c)  快速学习，快速改进（核心是快速改进）
             <hr>
         </div>
         <!-- group honor -->
-        <div class="section section2 opacity0">
+        <div id="honor" class="section section2 opacity0">
             <div class="Liz-container Liz-padding-vertical-lg">
                 <div class="Liz-flex  Liz-flex-justify-center">
                     <img src="images\page1\group honor.png">
@@ -376,7 +376,7 @@ c)  快速学习，快速改进（核心是快速改进）
             <hr>
         </div>
         <!-- chairman -->
-        <div class="section section3 opacity0">
+        <div id="chairman" class="section section3 opacity0">
             <div class="Liz-container Liz-padding-vertical-lg">
                 <div class="Liz-flex  Liz-flex-justify-center">
                     <img src="images\page1\chairman.png">
