--- a/subbrand.html
+++ b/subbrand.html
@@ -31,16 +31,16 @@
                         <a aria-expanded="false" aria-haspopup="true" class=" dropdown-toggle" data-toggle="dropdown" href="#" id="dropdownMenu1">关于卓尚</a>
                         <ul aria-labelledby="dropdownMenu1" class="dropdown-menu">
                             <li>
-                                <a href="#">集团文化</a>
+                                <a href="./groupIntro.html#culture">集团文化</a>
                             </li>
                             <li>
-                                <a href="#">发展历史</a>
+                                <a href="./groupIntro.html#history">发展历史</a>
                             </li>
                             <li>
-                                <a href="#">集团荣誉</a>
+                                <a href="./groupIntro.html#honor">集团荣誉</a>
                             </li>
                             <li>
-                                <a href="#">董事长致词</a>
+                                <a href="./groupIntro.html#chairman">董事长致词</a>
                             </li>
                         </ul>
                     </li>
