--- a/learn.html
+++ b/learn.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div id="header" class="header bgScreen">
+    <div id="header" class="header">
         <!-- 菜单栏 -->
         <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
             <div class="Liz-flex Liz-flex-align-center">
