--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <!-- Header -->
-        <div id="header" class="header bgScreen">
+        <div id="header" class="header">
             <!-- 菜单栏 -->
             <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
                 <div class="Liz-flex Liz-flex-align-center">
