--- a/subbrand.html
+++ b/subbrand.html
@@ -19,7 +19,7 @@
 <body>
 
     <!-- Header -->
-    <div id="header" class="header bgScreen">
+    <div id="header" class="header">
         <!-- 菜单栏 -->
         <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
             <div class="Liz-flex Liz-flex-align-center">
