--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <div class="Liz-flex Liz-main-container Liz-flex-column Liz-flex-align-between">
-    <img src="images/page2/bg-1.png" alt="" class="Liz-img Liz-img1">
-    <img src="images/page2/bg-2.png" alt="" class="Liz-img Liz-img2">
-    <img src="images/page2/bg-3.png" alt="" class="Liz-img Liz-img1">
+    <div class="Liz-img Liz-img1"></div>
+    <div class="Liz-img Liz-img2"></div>
+    <div class="Liz-img Liz-img3"></div>
 </div>
 <div class="Liz-main-container Liz-screen Liz-flex Liz-flex-align-center Liz-flex-justify-center">
     <div class=" Liz-flex-column">
