--- a/learn.html
+++ b/learn.html
@@ -23,7 +23,7 @@
         <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
             <div class="Liz-flex Liz-flex-align-center">
                 <div class="Liz-flex-1">
-                    <img src="images/page1/logo.png" width="109px">
+                    <img src="images/page1/logo.png" width="158">
                 </div>
                 <ul class="Liz-flex Liz-flex-1 Liz-header-nav">
                     <li class="active dropdown Liz-flex-1">
