--- a/development.html
+++ b/development.html
@@ -25,7 +25,7 @@
         <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
             <div class="Liz-flex Liz-flex-align-center">
                 <div class="Liz-flex-1">
-                    <img src="images/page1/logo.png" width="109px">
+                    <a href="index.html"><img src="images/page1/logo.png"></a>
                 </div>
                 <ul class="Liz-flex Liz-flex-1 Liz-header-nav">
                     <li class="active dropdown Liz-flex-1">
@@ -68,7 +68,16 @@
         <div class="overlayer active"></div>
         <img src="images/page4/talent.png" alt="" class="imgScreen">
     </div>
-
+     <div class="section">
+            <div class="Liz-container">
+                <ol class="breadcrumb2">
+                  <li><a href="./index.html">HOME</a></li>
+                  <li><a href="#">人才发展</a></li>
+                  <li class="active">加入我们</li>
+                </ol>
+            </div>
+            <hr>
+        </div>
 
     <div class="section">
             <div class="Liz-container">
@@ -170,8 +179,8 @@
         <div class="Liz-border-vertical" id="footer">
             <!-- 品牌 -->
             <div class="section">
-                <div class="Liz-container Liz-margin-vertical-lg">
-                    <div class="Liz-flex">
+                <div class="Liz-container">
+                    <div class="Liz-flex footerLogList">
                         <div class="Liz-flex-1 Liz-border-right">
                             <img src="images/page1/logo1.png" alt="">
                         </div>
@@ -205,16 +214,16 @@
 
                             <ul class="footList Liz-flex-1">
                                 <li class="Liz-text-lg">关于卓尚</li>
-                                <li class="Liz-border-bottom"></li>
+                                <hr>
                                 <li>集团文化</li>
                                 <li>发展历史</li>
                                 <li>集团荣誉</li>
                                 <li>董事长致词</li>
                             </ul>
 
-                            <ul class="footList Liz-flex-1">
+                            <ul class="footList-brand Liz-flex-1">
                                 <li class="Liz-text-lg">集团文化</li>
-                                <li class="Liz-border-bottom"></li>
+                                <hr>
                                 <li>三彩 3COLOUR</li>
                                 <li>丽雪 Leisure</li>
                                 <li>伊布都 ibudu</li>
@@ -224,7 +233,7 @@
 
                             <ul class="footList Liz-flex-1">
                                 <li class="Liz-text-lg">新闻中心</li>
-                                <li class="Liz-border-bottom"></li>
+                                <hr>
                                 <li>集团新闻</li>
                                 <li>公益事业</li>
                                 <li>员工关怀</li>
@@ -232,7 +241,7 @@
 
                             <ul class="footList Liz-flex-1">
                                 <li class="Liz-text-lg">人才发展</li>
-                                <li class="Liz-border-bottom"></li>
+                                <hr>
                                 <li>加入我们</li>
                                 <li>薪酬福利</li>
                                 <li>学习发展</li>
@@ -254,7 +263,7 @@
             </footer>
             <hr>
             <div class="section">
-                <div class="Liz-container Liz-margin-vertical-lg Liz-flex">
+                <div class="Liz-container footerDesign Liz-flex">
                     <div class="Liz-flex-1">
                         <img src="images\page1\copy.png" class="img-responsive ">
                     </div>
@@ -269,6 +278,7 @@
     <script src="js/headroom.min.js"></script>
     <script src="js/jquery.headroom.min.js"></script>
     <script type="text/javascript" src="js/base.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/development.js"></script>
     <script>
     </script>
