--- a/groupIntro.html
+++ b/groupIntro.html
@@ -25,7 +25,7 @@
         <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
             <div class="Liz-flex Liz-flex-align-center">
                 <div class="Liz-flex-1">
-                    <img src="images/page1/logo.png" width="109px">
+                    <a href="index.html"><img src="images/page1/logo.png"></a>
                 </div>
                 <ul class="Liz-flex Liz-flex-1 Liz-header-nav">
                     <li class="active dropdown Liz-flex-1">
@@ -90,7 +90,7 @@
         </div>
         <div class="section Liz-flex">
             <div class="Liz-flex-1 Liz-flex Liz-flex-justify-right Liz-flex-align-center" style="margin:20px 0;">
-                <div style="width: 600px;height:600px;overflow:auto;    " class="Liz-scroll">
+                <div style="width: 580px;height:600px;overflow:auto;    " class="Liz-scroll">
                     <pre>
 一、卓尚的核心价值观
 1.只听对的：不听大的
@@ -403,25 +403,25 @@ c)  快速学习，快速改进（核心是快速改进）
                 </ul>
 
                 <hr>
-                <div class="text Liz-scroll" style="width: 600px;overflow:auto;padding:0 30px;height: 482px;margin: 20px 0;">
+                <div class="text Liz-scroll" style="width: 600px;overflow:auto;padding:0 30px;height: 458px;margin: 20px 0;">
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane active fade in" id="dream">
                             <pre>
-                                服装道路，义无反顾
-                                作为一个没有服装行业工作经验的创业者，能从下岗工人一路走到现在，我始终心怀感恩感谢这一路给我帮助、与我同行的所有人。很多人问我，是什么力量支撑我一直坚持服装行业，其实，也有很多服装行业的人转行，我始终坚持并不是因为我的兴趣和爱好，而是因为责任，是因为需要。如果说只有相信自己会成功的人才会成功，那我愿意做一个自信的人，我不怕被同行打败，因为他们是拿兴趣玩儿，而我是在拿命玩儿。
+服装道路，义无反顾
+作为一个没有服装行业工作经验的创业者，能从下岗工人一路走到现在，我始终心怀感恩感谢这一路给我帮助、与我同行的所有人。很多人问我，是什么力量支撑我一直坚持服装行业，其实，也有很多服装行业的人转行，我始终坚持并不是因为我的兴趣和爱好，而是因为责任，是因为需要。如果说只有相信自己会成功的人才会成功，那我愿意做一个自信的人，我不怕被同行打败，因为他们是拿兴趣玩儿，而我是在拿命玩儿。
 
-                                内化于心，外化于行
-                                我能够走到今天其实是团队成就了我，我一直在思考我对团队的价值，因此，12年前我开始用心总结我们之所以成功和发展的关键，这也就是我们今天说得公司的企业文化。我常常觉得，很多学生时代学过的例如√4这样的知识如果没有实际用处就产生不了它应有的价值，而我们所说的以“只听对的，客户第一，成就他人”为核心价值观的企业文化却是在我们工作中每天都要用到的行动指南。企业文化不是简单的标语，它实实在在地存在于我们每天的工作中，只有将企业文化内化于心、外化于行，你才有可能成为被卓尚认可、被卓尚需要的同行者。
+内化于心，外化于行
+我能够走到今天其实是团队成就了我，我一直在思考我对团队的价值，因此，12年前我开始用心总结我们之所以成功和发展的关键，这也就是我们今天说得公司的企业文化。我常常觉得，很多学生时代学过的例如√4这样的知识如果没有实际用处就产生不了它应有的价值，而我们所说的以“只听对的，客户第一，成就他人”为核心价值观的企业文化却是在我们工作中每天都要用到的行动指南。企业文化不是简单的标语，它实实在在地存在于我们每天的工作中，只有将企业文化内化于心、外化于行，你才有可能成为被卓尚认可、被卓尚需要的同行者。
 
-                                践行梦想，与你同行
-                                前段时间我在企业文化中加了自己的最新感悟，就是“与奋斗者共享未来”，奋斗者的第一个标志就是有伟大梦想。大家都说“梦想还是要有的，万一实现了呢？”我并不认为只有实现梦想才算是成功，当别人的梦想是100分，而你的梦想是10000分，当你达到8000分然后失败了的时候，谁能说你没有成功呢？在活着的时候做了自己想做的事情，我认为这就是幸福。
-                                但从另一方面来讲，梦想如果只停留在脑海中那只能算空想，梦想需要落地、需要践行。在践行梦想的过程中，我们要不断地拓宽视野、不断地充实自己、不断地内向归因、反思自己。对于改变不了的事情，不抱怨、不埋怨，对于可以改变的事情，全心关注、全力以赴。付出总得需要时间来证明回报，而我们迈出的每一步都需要想明白三个问题——你拥有什么？你想得到什么？你愿意失去什么？
+践行梦想，与你同行
+前段时间我在企业文化中加了自己的最新感悟，就是“与奋斗者共享未来”，奋斗者的第一个标志就是有伟大梦想。大家都说“梦想还是要有的，万一实现了呢？”我并不认为只有实现梦想才算是成功，当别人的梦想是100分，而你的梦想是10000分，当你达到8000分然后失败了的时候，谁能说你没有成功呢？在活着的时候做了自己想做的事情，我认为这就是幸福。
+但从另一方面来讲，梦想如果只停留在脑海中那只能算空想，梦想需要落地、需要践行。在践行梦想的过程中，我们要不断地拓宽视野、不断地充实自己、不断地内向归因、反思自己。对于改变不了的事情，不抱怨、不埋怨，对于可以改变的事情，全心关注、全力以赴。付出总得需要时间来证明回报，而我们迈出的每一步都需要想明白三个问题——你拥有什么？你想得到什么？你愿意失去什么？
 
-                                在卓尚成为服装帝国的道路上，我们需要正确的同路人，换句话说，只要你是奋斗者，我们愿意与你共享未来！
+在卓尚成为服装帝国的道路上，我们需要正确的同路人，换句话说，只要你是奋斗者，我们愿意与你共享未来！
                             </pre>
                         </div>
-                        <div role="tabpanel" class="tab-pane fade" id="center"><pre>center</pre></div>
-                        <div role="tabpanel" class="tab-pane fade" id="hold"><pre>hold</pre></div>
+                        <div role="tabpanel" class="tab-pane fade in" id="center"><pre>center</pre></div>
+                        <div role="tabpanel" class="tab-pane fade in" id="hold"><pre>hold</pre></div>
                     </div>
                 </div>
             </div>
@@ -431,8 +431,8 @@ c)  快速学习，快速改进（核心是快速改进）
         <div class="section4 opacity0">
             <!-- 品牌 -->
             <div class="section">
-                <div class="Liz-container Liz-margin-vertical-lg">
-                    <div class="Liz-flex">
+                <div class="Liz-container">
+                    <div class="Liz-flex footerLogList">
                         <div class="Liz-flex-1 Liz-border-right">
                             <img src="images/page1/logo1.png" alt="">
                         </div>
@@ -463,19 +463,18 @@ c)  快速学习，快速改进（核心是快速改进）
                 <div class="Liz-container Liz-padding-vertical-lg">
                     <div class="Liz-flex">
                         <div class="Liz-flex-1 Liz-flex">
-
-                            <ul class="footList Liz-flex-1">
+                             <ul class="footList Liz-flex-1">
                                 <li class="Liz-text-lg"><a href="groupIntro.html">关于卓尚</a></li>
-                                <li class="Liz-border-bottom"></li>
+                                <hr>
                                 <li>集团文化</li>
                                 <li>发展历史</li>
                                 <li>集团荣誉</li>
                                 <li>董事长致词</li>
                             </ul>
 
-                            <ul class="footList Liz-flex-1">
+                            <ul class="footList-brand Liz-flex-1">
                                 <li class="Liz-text-lg"><a href="subbrand.html">集团文化</a></li>
-                                <li class="Liz-border-bottom"></li>
+                                <hr>
                                 <li>三彩 3COLOUR</li>
                                 <li>丽雪 Leisure</li>
                                 <li>伊布都 ibudu</li>
@@ -485,7 +484,7 @@ c)  快速学习，快速改进（核心是快速改进）
 
                             <ul class="footList Liz-flex-1">
                                 <li class="Liz-text-lg">新闻中心</li>
-                                <li class="Liz-border-bottom"></li>
+                                <hr>
                                 <li><a href="news.html">集团新闻</a></li>
                                 <li>公益事业</li>
                                 <li>员工关怀</li>
@@ -493,12 +492,11 @@ c)  快速学习，快速改进（核心是快速改进）
 
                             <ul class="footList Liz-flex-1">
                                 <li class="Liz-text-lg">人才发展</li>
-                                <li class="Liz-border-bottom"></li>
+                                <hr>
                                 <li><a href="development.html">加入我们</a></li>
                                 <li><a href="payment.html">薪酬福利</a></li>
                                 <li><a href="learn.html">学习发展</a></li>
                             </ul>
-
                         </div>
                         <div class="Liz-flex-1 Liz-flex Liz-flex-justify-right">
                             <div class="Liz-flex-1">
@@ -515,7 +513,7 @@ c)  快速学习，快速改进（核心是快速改进）
             </footer>
             <hr>
             <div class="section">
-                <div class="Liz-container Liz-margin-vertical-lg Liz-flex">
+                <div class="Liz-container footerDesign Liz-flex">
                     <div class="Liz-flex-1">
                         <img src="images\page1\copy.png" class="img-responsive ">
                     </div>
