--- a/learn.html
+++ b/learn.html
@@ -222,7 +222,7 @@
 
                         </div>
                         <div class="Liz-flex-1 Liz-flex Liz-flex-justify-right">
-                            <div class="Liz-flex-1">
+                            <div class="Liz-flex-1" style="padding-top: 15px;">
                                 <a href="#" class="Liz-cf"><img src="images\page1\footor-logo.png" class="img-responsive Liz-fr"></a>
                                 <br>
                                 <a href="#" class="Liz-cf"><img src="images\page1\address.png" class="img-responsive Liz-fr"></a>
