--- a/groupIntro.html
+++ b/groupIntro.html
@@ -499,7 +499,7 @@ c)  快速学习，快速改进（核心是快速改进）
                             </ul>
                         </div>
                         <div class="Liz-flex-1 Liz-flex Liz-flex-justify-right">
-                            <div class="Liz-flex-1">
+                            <div class="Liz-flex-1" style="padding-top: 15px;">
                                 <a href="#" class="Liz-cf"><img src="images\page1\footor-logo.png" class="img-responsive Liz-fr"></a>
                                 <br>
                                 <a href="#" class="Liz-cf"><img src="images\page1\address.png" class="img-responsive Liz-fr"></a>
